docs/apache-airflow-providers-snowflake/2.4.0/_sources/_api/airflow/providers/snowflake/transfers/snowflake_to_slack/index.rst.txt
:py:mod:`airflow.providers.snowflake.transfers.snowflake_to_slack`
==================================================================

.. py:module:: airflow.providers.snowflake.transfers.snowflake_to_slack


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.snowflake.transfers.snowflake_to_slack.SnowflakeToSlackOperator




.. py:class:: SnowflakeToSlackOperator(*, sql: str, slack_message: str, snowflake_conn_id: str = 'snowflake_default', slack_conn_id: str = 'slack_default', results_df_name: str = 'results_df', parameters: Optional[Union[Iterable, Mapping]] = None, warehouse: Optional[str] = None, database: Optional[str] = None, schema: Optional[str] = None, role: Optional[str] = None, slack_token: Optional[str] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Executes an SQL statement in Snowflake and sends the results to Slack. The results of the query are
   rendered into the 'slack_message' parameter as a Pandas dataframe using a JINJA variable called '{{
   results_df }}'. The 'results_df' variable name can be changed by specifying a different
   'results_df_name' parameter. The Tabulate library is added to the JINJA environment as a filter to
   allow the dataframe to be rendered nicely. For example, set 'slack_message' to {{ results_df |
   tabulate(tablefmt="pretty", headers="keys") }} to send the results to Slack as an ascii rendered table.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:SnowflakeToSlackOperator`

   :param sql: The SQL statement to execute on Snowflake (templated)
   :type sql: str
   :param slack_message: The templated Slack message to send with the data returned from Snowflake.
       You can use the default JINJA variable {{ results_df }} to access the pandas dataframe containing the
       SQL results
   :type slack_message: str
   :param snowflake_conn_id: Reference to
       :ref:`Snowflake connection id<howto/connection:snowflake>`
   :type snowflake_conn_id: str
   :param slack_conn_id: The connection id for Slack
   :type slack_conn_id: str
   :param results_df_name: The name of the JINJA template's dataframe variable, default is 'results_df'
   :type results_df_name: str
   :param parameters: The parameters to pass to the SQL query
   :type parameters: Optional[Union[Iterable, Mapping]]
   :param warehouse: The Snowflake virtual warehouse to use to run the SQL query
   :type warehouse: Optional[str]
   :param database: The Snowflake database to use for the SQL query
   :type database: Optional[str]
   :param schema: The schema to run the SQL against in Snowflake
   :type schema: Optional[str]
   :param role: The role to use when connecting to Snowflake
   :type role: Optional[str]
   :param slack_token: The token to use to authenticate to Slack. If this is not provided, the
       'webhook_token' attribute needs to be specified in the 'Extra' JSON field against the slack_conn_id
   :type slack_token: Optional[str]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['sql', 'slack_message']

      

   .. py:attribute:: template_ext
      :annotation: :Sequence[str] = ['.sql', '.jinja', '.j2']

      

   .. py:attribute:: template_fields_renderers
      

      

   .. py:attribute:: times_rendered
      :annotation: = 0

      

   .. py:method:: render_template_fields(self, context, jinja_env=None) -> None

      Template all attributes listed in template_fields. Note this operation is irreversible.

      :param context: Dict with values to apply on content
      :type context: dict
      :param jinja_env: Jinja environment
      :type jinja_env: jinja2.Environment


   .. py:method:: execute(self, context: airflow.utils.context.Context) -> None

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



